<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Activity_Main">

    <ImageView
        android:id="@+id/main_nowImg"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:src="@drawable/icon_img001"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/goalMoney"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/main_goalMoneyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/won"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/nowMoney"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/main_nowMoneyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/won"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal">
        <ProgressBar
            android:id="@+id/main_nowMoneyPb"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:max="100"/>
        <TextView
            android:id="@+id/main_nowMoneyPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/zero"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/main_goalSetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/goalSet"/>

    <Button
        android:id="@+id/main_moneySetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moneySet"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:enabled="false"/>

    <Button
        android:id="@+id/main_statisticBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/statisticSee"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/main_endBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endBtn"
        android:layout_gravity="center"
        android:enabled="false"/>

</LinearLayout>