<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Activity_Statistic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/roundText01"
            android:layout_marginEnd="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <Spinner
            android:id="@+id/statistic_spinnerRound"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="5"
            android:background="@drawable/spinner_frame01"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/dateText01"
            android:layout_marginEnd="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <Spinner
            android:id="@+id/statistic_spinnerDate"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="5"
            android:background="@drawable/spinner_frame01"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bankText01"
            android:layout_marginEnd="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <Spinner
            android:id="@+id/statistic_spinnerBank"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="5"
            android:background="@drawable/spinner_frame01"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/goalText01"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/statistic_goalMoneyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/zero"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/won"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/nowText02"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/statistic_saveMoneyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/zero"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/won"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/statistic_searchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/search"
        style="?android:attr/buttonBarButtonStyle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="30dp"
        android:background="@color/gray"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statistic_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:background="#C3C3C3"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/statistic_memoTv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bego01"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/statistic_memo02Tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bego02"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/gray"/>
</LinearLayout>