<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/frame03"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="10dp"
    android:paddingHorizontal="10dp">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/listview_save_dateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="2022-01-01"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/listview_save_bankTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="IBK기업은행"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/listview_save_deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/listview_save_memoTv"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/registerText02"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/listview_save_moneyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/zero"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/listview_save_wonTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/won"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/listview_save_deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>

</androidx.constraintlayout.widget.ConstraintLayout>